Release Changelog for VanasKoS

alpha-563:
- Fix PvP stats in battlegrounds
- Add continent, and world position to pvp events (may use in future)
- Refresh PVP stats and PVP log on PVP win or loss
alpha-562:
- Fix error with NPC party members as happens in some missions
- Fix error in warning window code if GetBestMapForUnit returns nil
- Change IsWarModeActive() calls to IsWarModeDesired()
- Fix reverse logic for enabling/disabling data gatherer in normal mode
alpha-561:
- Fix curse packager issues
alpha-559:
- Fix last seen list right click menu
alpha-558:
- Fix bugs in combat log monitoring
- Fix bug not adding to the player event crossreference table
- Add all the most recent attackers (<5s) to pvplog on death
- Add conversion from old pvpstats to importer
- Remove old pvp stats
alpha-557:
- Add list to show detailed pvp log
- Add options for handling war mode and pvp flags
- Fix notifier for Party API changes
alpha-555:
- Fix yet another importer issue player is not plural for pvplog
  - Made new location plural for consistency with other lists
  - Changed pvplog location no longer underneath pvpstats
- Re-add "Lookup in VanasKoS" but under portrain context menu instead of ChatNotifier
alpha-554:
- Add < > surrounding guild name in guild kos list
- Change color of guild kos entries with an owner specified
- Display "reason" as the default guild kos group
- Fix pvplog importer using field for name
- Fix adding entries from last attackers list #94
- Add a default reason when adding from last attackers list
- Fix adding entries from "Add Entry" button
- Fix selecting PvP stats by character
alpha-553:
- Fix more importer errors
- Fix Mouseover data for player pvp stats
alpha-552:
- Fix a couple of importer issues
- Removed unused guilddata
- Fix colors in some flash notifications
alpha-551:
- Fix "Change Entry" button #88
- Fix command line entry adding #93
- Fix debug function to add pvp log entries
alpha-550:
- Replace UIFrameFlash (finally)
alpha-549: