@@ -10,6 +10,456 @@ local hashName = VanasKoS.hashName
 local hashGuild = VanasKoS.hashGuild
 local splitNameRealm = VanasKoS.splitNameRealm
 
+-- This data was taken for HereBeDragons, glad they did the hard work here
+-- I'll just trust their data is correct...
+local areaIdToUiMapId = {
+    [4]    = 1,
+    [9]    = 7,
+    [11]   = 10,
+    [13]   = 12,
+    [14]   = 13,
+    [16]   = 14,
+    [17]   = 16,
+    [19]   = 17,
+    [20]   = 18,
+    [21]   = 21,
+    [22]   = 22,
+    [23]   = 23,
+    [24]   = 25,
+    [26]   = 26,
+    [27]   = 28,
+    [28]   = 32,
+    [29]   = 36,
+    [30]   = 38,
+    [32]   = 42,
+    [34]   = 47,
+    [35]   = 48,
+    [36]   = 49,
+    [37]   = 50,
+    [38]   = 51,
+    [39]   = 52,
+    [40]   = 56,
+    [41]   = 58,
+    [42]   = 62,
+    [43]   = 63,
+    [61]   = 64,
+    [81]   = 65,
+    [101]  = 66,
+    [121]  = 69,
+    [141]  = 70,
+    [161]  = 71,
+    [181]  = 76,
+    [182]  = 77,
+    [201]  = 78,
+    [241]  = 80,
+    [261]  = 81,
+    [281]  = 83,
+    [301]  = 84,
+    [321]  = 86,
+    [341]  = 87,
+    [362]  = 88,
+    [381]  = 89,
+    [382]  = 998,
+    [401]  = 91,
+    [443]  = 92,
+    [461]  = 93,
+    [462]  = 94,
+    [463]  = 96,
+    [464]  = 97,
+    [465]  = 100,
+    [466]  = 101,
+    [467]  = 102,
+    [471]  = 103,
+    [473]  = 104,
+    [475]  = 105,
+    [476]  = 106,
+    [477]  = 107,
+    [478]  = 108,
+    [479]  = 109,
+    [480]  = 110,
+    [481]  = 111,
+    [482]  = 112,
+    [485]  = 113,
+    [486]  = 114,
+    [488]  = 115,
+    [490]  = 116,
+    [491]  = 117,
+    [492]  = 118,
+    [493]  = 119,
+    [495]  = 120,
+    [496]  = 121,
+    [499]  = 122,
+    [501]  = 123,
+    [502]  = 124,
+    [504]  = 125,
+    [510]  = 127,
+    [512]  = 128,
+    [520]  = 129,
+    [521]  = 131,
+    [522]  = 132,
+    [523]  = 133,
+    [524]  = 136,
+    [525]  = 138,
+    [526]  = 140,
+    [527]  = 141,
+    [528]  = 143,
+    [529]  = 148,
+    [530]  = 154,
+    [531]  = 155,
+    [532]  = 156,
+    [533]  = 157,
+    [534]  = 160,
+    [535]  = 162,
+    [536]  = 168,
+    [540]  = 169,
+    [541]  = 170,
+    [542]  = 171,
+    [543]  = 172,
+    [544]  = 175,
+    [545]  = 180,
+    [601]  = 183,
+    [602]  = 184,
+    [603]  = 185,
+    [604]  = 186,
+    [605]  = 196,
+    [606]  = 198,
+    [607]  = 199,
+    [609]  = 200,
+    [610]  = 201,
+    [611]  = 202,
+    [613]  = 203,
+    [614]  = 204,
+    [615]  = 205,
+    [626]  = 206,
+    [640]  = 208,
+    [673]  = 210,
+    [680]  = 213,
+    [684]  = 217,
+    [685]  = 218,
+    [686]  = 219,
+    [687]  = 220,
+    [688]  = 221,
+    [689]  = 224,
+    [690]  = 225,
+    [691]  = 226,
+    [692]  = 230,
+    [696]  = 232,
+    [697]  = 233,
+    [699]  = 235,
+    [700]  = 241,
+    [704]  = 242,
+    [708]  = 244,
+    [709]  = 245,
+    [710]  = 246,
+    [717]  = 247,
+    [718]  = 248,
+    [720]  = 249,
+    [721]  = 250,
+    [722]  = 256,
+    [723]  = 258,
+    [724]  = 260,
+    [725]  = 261,
+    [726]  = 262,
+    [727]  = 263,
+    [728]  = 265,
+    [729]  = 266,
+    [730]  = 267,
+    [731]  = 269,
+    [732]  = 272,
+    [733]  = 273,
+    [734]  = 274,
+    [736]  = 275,
+    [737]  = 276,
+    [747]  = 277,
+    [749]  = 279,
+    [750]  = 280,
+    [751]  = 948,
+    [752]  = 282,
+    [753]  = 283,
+    [754]  = 285,
+    [755]  = 287,
+    [756]  = 291,
+    [757]  = 293,
+    [758]  = 294,
+    [759]  = 297,
+    [760]  = 300,
+    [761]  = 301,
+    [762]  = 302,
+    [763]  = 306,
+    [764]  = 310,
+    [765]  = 317,
+    [766]  = 319,
+    [767]  = 322,
+    [768]  = 324,
+    [769]  = 325,
+    [772]  = 327,
+    [773]  = 328,
+    [775]  = 329,
+    [776]  = 330,
+    [779]  = 331,
+    [780]  = 332,
+    [781]  = 333,
+    [782]  = 334,
+    [789]  = 336,
+    [793]  = 337,
+    [795]  = 338,
+    [796]  = 340,
+    [797]  = 347,
+    [798]  = 348,
+    [799]  = 350,
+    [800]  = 368,
+    [803]  = 370,
+    [806]  = 372,
+    [807]  = 376,
+    [808]  = 378,
+    [809]  = 379,
+    [810]  = 388,
+    [811]  = 391,
+    [813]  = 397,
+    [816]  = 398,
+    [819]  = 400,
+    [820]  = 402,
+    [823]  = 408,
+    [824]  = 410,
+    [851]  = 416,
+    [856]  = 417,
+    [857]  = 419,
+    [858]  = 422,
+    [860]  = 423,
+    [862]  = 424,
+    [864]  = 425,
+    [866]  = 427,
+    [867]  = 429,
+    [871]  = 431,
+    [873]  = 433,
+    [874]  = 435,
+    [875]  = 437,
+    [876]  = 439,
+    [877]  = 444,
+    [878]  = 447,
+    [880]  = 448,
+    [881]  = 449,
+    [882]  = 450,
+    [883]  = 451,
+    [884]  = 452,
+    [885]  = 453,
+    [886]  = 456,
+    [887]  = 458,
+    [888]  = 460,
+    [889]  = 461,
+    [890]  = 462,
+    [891]  = 463,
+    [892]  = 465,
+    [893]  = 467,
+    [894]  = 468,
+    [895]  = 469,
+    [896]  = 471,
+    [897]  = 474,
+    [898]  = 476,
+    [899]  = 480,
+    [900]  = 481,
+    [906]  = 483,
+    [911]  = 486,
+    [912]  = 487,
+    [914]  = 489,
+    [919]  = 491,
+    [920]  = 498,
+    [922]  = 499,
+    [924]  = 501,
+    [925]  = 503,
+    [928]  = 505,
+    [929]  = 507,
+    [930]  = 508,
+    [933]  = 517,
+    [934]  = 518,
+    [935]  = 519,
+    [937]  = 521,
+    [938]  = 522,
+    [939]  = 523,
+    [940]  = 524,
+    [941]  = 526,
+    [945]  = 534,
+    [946]  = 535,
+    [947]  = 539,
+    [948]  = 542,
+    [949]  = 543,
+    [950]  = 552,
+    [951]  = 554,
+    [953]  = 557,
+    [955]  = 571,
+    [962]  = 572,
+    [964]  = 573,
+    [969]  = 574,
+    [970]  = 578,
+    [971]  = 580,
+    [973]  = 582,
+    [976]  = 586,
+    [978]  = 588,
+    [980]  = 590,
+    [983]  = 592,
+    [984]  = 593,
+    [986]  = 594,
+    [987]  = 595,
+    [988]  = 596,
+    [989]  = 601,
+    [993]  = 606,
+    [994]  = 611,
+    [995]  = 616,
+    [1007] = 619,
+    [1008] = 621,
+    [1009] = 622,
+    [1010] = 623,
+    [1011] = 624,
+    [1014] = 625,
+    [1015] = 630,
+    [1017] = 635,
+    [1018] = 641,
+    [1020] = 645,
+    [1021] = 647,
+    [1022] = 649,
+    [1024] = 650,
+    [1026] = 662,
+    [1027] = 671,
+    [1028] = 673,
+    [1031] = 676,
+    [1032] = 677,
+    [1033] = 683,
+    [1034] = 694,
+    [1035] = 695,
+    [1037] = 696,
+    [1038] = 697,
+    [1039] = 698,
+    [1040] = 702,
+    [1041] = 704,
+    [1042] = 707,
+    [1044] = 709,
+    [1045] = 710,
+    [1046] = 713,
+    [1047] = 714,
+    [1048] = 715,
+    [1049] = 716,
+    [1050] = 717,
+    [1051] = 718,
+    [1052] = 720,
+    [1054] = 723,
+    [1056] = 725,
+    [1057] = 726,
+    [1059] = 728,
+    [1060] = 729,
+    [1065] = 731,
+    [1066] = 732,
+    [1067] = 733,
+    [1068] = 734,
+    [1069] = 736,
+    [1070] = 737,
+    [1071] = 738,
+    [1072] = 739,
+    [1073] = 740,
+    [1075] = 742,
+    [1076] = 744,
+    [1077] = 747,
+    [1078] = 748,
+    [1079] = 749,
+    [1080] = 750,
+    [1081] = 751,
+    [1082] = 757,
+    [1084] = 758,
+    [1085] = 759,
+    [1086] = 760,
+    [1087] = 762,
+    [1088] = 764,
+    [1090] = 774,
+    [1091] = 775,
+    [1092] = 776,
+    [1094] = 777,
+    [1096] = 790,
+    [1097] = 791,
+    [1099] = 793,
+    [1100] = 794,
+    [1102] = 798,
+    [1104] = 800,
+    [1105] = 804,
+    [1114] = 807,
+    [1115] = 809,
+    [1116] = 823,
+    [1126] = 824,
+    [1127] = 825,
+    [1129] = 826,
+    [1130] = 827,
+    [1131] = 828,
+    [1132] = 829,
+    [1135] = 831,
+    [1136] = 834,
+    [1137] = 835,
+    [1139] = 837,
+    [1140] = 838,
+    [1142] = 839,
+    [1143] = 840,
+    [1144] = 843,
+    [1145] = 844,
+    [1146] = 845,
+    [1147] = 850,
+    [1148] = 857,
+    [1149] = 858,
+    [1150] = 859,
+    [1151] = 860,
+    [1152] = 861,
+    [1153] = 862,
+    [1154] = 863,
+    [1155] = 864,
+    [1156] = 865,
+    [1157] = 867,
+    [1158] = 868,
+    [1159] = 869,
+    [1160] = 871,
+    [1161] = 873,
+    [1162] = 875,
+    [1163] = 876,
+    [1164] = 877,
+    [1165] = 879,
+    [1166] = 881,
+    [1170] = 882,
+    [1171] = 885,
+    [1172] = 888,
+    [1173] = 889,
+    [1174] = 892,
+    [1175] = 895,
+    [1176] = 896,
+    [1177] = 898,
+    [1178] = 903,
+    [1183] = 904,
+    [1184] = 994,
+    [1185] = 906,
+    [1186] = 907,
+    [1187] = 908,
+    [1188] = 910,
+    [1190] = 921,
+    [1191] = 922,
+    [1192] = 923,
+    [1193] = 924,
+    [1194] = 925,
+    [1195] = 926,
+    [1196] = 927,
+    [1197] = 928,
+    [1198] = 929,
+    [1199] = 930,
+    [1200] = 931,
+    [1201] = 932,
+    [1202] = 933,
+    [1204] = 935,
+    [1205] = 936,
+    [1210] = 938,
+    [1211] = 939,
+    [1212] = 940,
+    [1213] = 942,
+    [1214] = 943,
+    [1215] = 971,
+    [1216] = 972,
+    [1217] = 973,
+    [1219] = 976,
+    [1220] = 981,
+}
+
 function VanasKoSImporter:OnInitialize()
 	VanasKoSGUI:AddConfigOption("Importer", {
 		type = "group",
@@ -103,9 +553,18 @@ function VanasKoSImporter:FromOldVanasKoS()
 					pvplog.event[eventKey].mylevel = eventdata.mylevel
 					pvplog.event[eventKey].time = eventdata.time
 					pvplog.event[eventKey].type = eventdata.type
-					-- pvplog.event[eventKey].mapID = convert(eventdata.areaID)
-					-- pvplog.event[eventKey].x = data.posX,
-					-- pvplog.event[eventKey].y = data.posY
+					pvplog.event[eventKey].mapID = areaIdToUiMapId[eventdata.areaID]
+					pvplog.event[eventKey].x = eventdata.posX
+					pvplog.event[eventKey].y = eventdata.posY
+					if pvplog.event[eventKey].mapID and eventdata.posX and eventdata.posY then
+						local cID, wPos = C_Map.GetWorldPosFromMapPos(pvplog.event[eventKey].mapID, CreateVector2D(eventdata.posX, eventdata.posY))
+						pvplog.event[eventKey].cID = cID
+						if wPos then
+							local wx, wy = wPos:GetXY()
+							pvplog.event[eventKey].wx = wx
+							pvplog.event[eventKey].wy = wy
+						end
+					end
 					count = count + 1
 					oldlog[eventKey] = nil
 				end
@@ -120,13 +579,18 @@ function VanasKoSImporter:FromOldVanasKoS()
 					local playerKey = hashName(playerName, playerRealm)
 					pvplog.players[playerKey] = eventKeyTable
 					count = count + 1
-					oldlog[playerFullName] = nil
+					oldlog.player[playerFullName] = nil
 				end
 				oldlog.player = nil
 			end
 
 			if oldlog and oldlog.area then
-				-- convert areas
+				for areaID,eventKeyTable in pairs(oldlog.area) do
+					local mapId = areaIdToUiMapId[areaID]
+					pvplog.map[mapId] = eventKeyTable
+					count = count + 1
+					oldlog.area[areaID] = nil
+				end
 				oldlog.area = nil
 			end
 		end
@@ -174,7 +638,7 @@ function VanasKoSImporter:FromOldVanasKoS()
 					playerData[playerKey].class = olddata.class
 					playerData[playerKey].classEnglish = olddata.classEnglish
 					playerData[playerKey].gender = olddata.gender
-					playerData[playerKey].mapID = olddata.mapID
+					playerData[playerKey].mapID = areaIdToUiMapId[olddata.areaID]
 					playerData[playerKey].guid = olddata.guid
 					count = count + 1
 					olddata[fullPlayerName] = nil
